sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:6: error: '(' expected but identifier found.
    if isSmaller(i+1,i) {
       ^AlgGnomeSort:15: error: illegal start of simple expression
  }
  ^