sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
  var n:Int = getValueCount();
  var i:Int = 0;
  while (i != n-1) {
    if isSmaller(i+1,i) {
      swap(i,i+1);
      if (i !=0) {
        i = i-1;
      }
    }
    else {
      i = i+1;
    }
  }
}